--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <h1 class="instructor-title">Instructors</h1>
         <div class="instructor-content">
             <div class="instructor-content-item">
-                <img class="instructor-content-item-image" src="styles/images/instructor1.jpg">
+                <a href="hilary-mcreynolds/index.html">
+                    <img class="instructor-content-item-image" src="styles/images/instructor1.jpg">
+                </a>
                 <div class="instructor-content-item-details">
                     <h3>Hilary McReynolds</h3>
                     <p>Software Engineer</p>
